--- a/Rem/Self/.vscode/settings.json
+++ b/Rem/Self/.vscode/settings.json
@@ -1,3 +1,19 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "todohighlight.keywords": [
+        "REVIEW:",
+        {
+            "text": "NOTE:",
+            "color": "#ff0000",
+            "backgroundColor": "yellow",
+            "overviewRulerColor": "grey"
+        },
+        "Important:",
+        {
+            "text": "!",
+            "color": "white",
+            "backgroundColor": "green",
+            "overviewRulerColor": "grey"
+        },
+    ]
 }
