from atom laptop

--- a/Rem/.vscode/settings.json
+++ b/Rem/.vscode/settings.json
@@ -1,3 +1,15 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "todohighlight.keywords": 
+    [
+        {
+            "text": "IMP:",
+            "color": "red",
+            "border": "1px solid red",
+            "borderRadius": "2px", //NOTE: using borderRadius along with `border` or you will see nothing change
+            "backgroundColor": "rgba(0,0,0,.2)",
+            //other styling properties goes here ... 
+        }
+
+    ]
 }
