Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
     serverUrl: 'ftp://win27.herosite.pro/'
     username: 'saravmani'
     password: 'Catwarcv123#'
-    rootDirectory: $(Build.SourcesDirectory)/
+    rootDirectory: 
     filePatterns: '**.md'
     remoteDirectory: '/httpdocs/wwwroot/Docs/'
     clean: false
