Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     username: 'saravmani'
     password: 'Catwarcv123#'
     rootDirectory: 
-    filePatterns: '**.md'
+    filePatterns: '**/*.md'
     remoteDirectory: '/httpdocs/wwwroot/Docs/'
     clean: false
     cleanContents: false
