--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,8 @@ steps:
     cleanContents: false
     preservePaths: false
     trustSSL: false
-- task: InvokeRESTAPI@1
+- task: PowerShell@2
   inputs:
-    connectionType: 'connectedServiceName'
-    method: 'GET'
-    urlSuffix: 'https://fullstack-lab.co.in/api/BloggerClient/LoadMetadataFromFiles'
-    waitForCompletion: 'false'
+    targetType: 'inline'
+    script: 'Invoke-RestMethod -Uri ''https://fullstack-lab.co.in/api/BloggerClient/LoadMetadataFromFiles'' -Method Get;'
+    errorActionPreference: 'continue'
