Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     rootDirectory: 
     filePatterns: '**/*.md'
     remoteDirectory: '/httpdocs/wwwroot/Docs/'
-    clean: false
+    clean: true
     cleanContents: false
     preservePaths: false
     trustSSL: false
